// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BlogItem component should be translated correctly in English 1`] = `
<body>
  <div>
    <a
      class="show-more"
      href="//undefined"
    >
      <div
        class="ant-row blog-item"
      >
        <div
          class="ant-col blog-image ant-col-sm-24 ant-col-md-12 ant-col-lg-10"
        >
          <img
            alt="Title"
            src="image-url"
          />
        </div>
        <div
          class="ant-col blog-meta ant-col-sm-24 ant-col-md-12 ant-col-lg-14"
        >
          <span
            class="ant-typography ant-typography-secondary"
          >
            Written by First Last • 1/1/1970
          </span>
          <h3
            class="ant-typography"
          >
            Title
          </h3>
          <div
            class="ant-typography"
          >
            Lorem ipsum dolor sit amet consectetur adipisicing elit
          </div>
        </div>
      </div>
    </a>
  </div>
</body>
`;

exports[`BlogItem component should be translated correctly in Romanian 1`] = `
<body>
  <div>
    <a
      class="show-more"
      href="//undefined"
    >
      <div
        class="ant-row blog-item"
      >
        <div
          class="ant-col blog-image ant-col-sm-24 ant-col-md-12 ant-col-lg-10"
        >
          <img
            alt="Title"
            src="image-url"
          />
        </div>
        <div
          class="ant-col blog-meta ant-col-sm-24 ant-col-md-12 ant-col-lg-14"
        >
          <span
            class="ant-typography ant-typography-secondary"
          >
            Scris de First Last • 1/1/1970
          </span>
          <h3
            class="ant-typography"
          >
            Title
          </h3>
          <div
            class="ant-typography"
          >
            Lorem ipsum dolor sit amet consectetur adipisicing elit
          </div>
        </div>
      </div>
    </a>
  </div>
</body>
`;
